--- a/frontend/src/components/form/login/style.scss
+++ b/frontend/src/components/form/login/style.scss
@@ -15,5 +15,62 @@
         padding: 0 10px;
         margin-bottom: 10px;
         color: var(--color-primary);
+
+        &:focus {
+            border-color: var(--blue-color);
+        }
+    }
+
+    i {
+        position: absolute;
+        right: 5px;
+        top: 15px;
+        transform: scale(0.8);
+    }
+
+    .input {
+        &-error-message {
+            position: relative;
+            padding: 15px 10px;
+            background: #b94a48;
+            color: #fff;
+            width: 100%;
+            font-size: 13px;
+            border-radius: 7px;
+            margin-bottom: 15px;
+            transform: translateY(2px);
+        }
+
+        &-error-desktop {
+            position: absolute;
+            width: 300px;
+            left: -19.5rem;
+            top: -3px;
+        }
+
+        &-arrow-top {
+            border-top: 10px solid #b94a48;
+            border-left: 10px solid transparent;
+            border-right: 10px solid transparent;
+            position: absolute;
+            bottom: -9px;
+        }
+
+        &-arrow-bottom {
+            border-bottom: 10px solid #b94a48;
+            border-left: 10px solid transparent;
+            border-right: 10px solid transparent;
+            position: absolute;
+            top: -9px;
+        }
+
+        &-arrow-left {
+            border-left: 10px solid #b94a48;
+            border-top: 10px solid transparent;
+            border-bottom: 10px solid transparent;
+            position: absolute;
+            right: -9px;
+            top: calc(50% - 10px);
+        }
     }
 }
