--- a/frontend/src/pages/login/style.scss
+++ b/frontend/src/pages/login/style.scss
@@ -1,74 +1,15 @@
 .login {
+  &-wrapper {
+    background: var(--bg-secondary);
+    min-height: 80vh;
+    min-width: fit-content;
+  }
+}
+
+@media (min-width: 850px) {
+  .login {
     &-wrapper {
-        background: var(--bg-secondary);
-        min-height: 80vh;
+      display: flex;
     }
-
-    &-wrap {
-        min-height: fit-content;
-        color: var(--color-primary);
-
-        span {
-            font-size: 18px;
-        }
-    }
-
-    &-text {
-        width: 300px;
-        margin: 0 auto;
-        text-align: center;
-    }
-
-    &-form {
-        width: 350px;
-        margin: 1rem auto;
-
-        button {
-            width: 100%;
-            height: 50px;
-            font-size: 17px;
-            user-select: none;
-
-            &.open-signup {
-                width: 70%;
-            }
-        }
-
-        &-wrap {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 1rem;
-            background: var(--bg-primary);
-            box-shadow: 0 1px 2px var(--shadow-1);
-            margin-bottom: 1rem;
-            padding: 1rem 1rem 2rem 1rem;
-            height: fit-content;
-            border-radius: 10px;
-
-            form {
-                width: 100%;
-            }
-        }
-    }
-
-    .forgot-password {
-        color: var(--blue-color);
-        font-size: 14px;
-        cursor: pointer;
-
-        &:hover {
-            text-decoration: underline;
-        }
-    }
-
-    .sign-splitter {
-        width: 100%;
-        height: 1px;
-        background: var(--bg-third);
-    }
-
-    .sing-extra {
-        font-size: 15px;
-    }
+  }
 }
