Login and register user done.

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -76,6 +76,9 @@ a {
 .success-text {
   color: var(--green-color);
 }
+.text-center {
+  text-align: center;
+}
 .blur {
   position: fixed;
   inset: 0;
