--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -85,3 +85,17 @@ a {
   background: rgba(255, 255, 255, 0.768);
   z-index: 999;
 }
+
+.hover1:hover {
+  background: var(--bg-secondary);
+}
+
+.hover2:hover {
+  background: var(--bg-third);
+}
+
+.active {
+  border-bottom: 3px solid var(--blue-color);
+  border-radius: 0 !important;
+  height: 56px !important;
+}
