Outsideclick huck added.

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -99,3 +99,9 @@ a {
   border-radius: 0 !important;
   height: 56px !important;
 }
+
+.card {
+  height: 500px;
+  width: 500px;
+  background: red;
+}
