--- a/frontend/src/components/header/style.scss
+++ b/frontend/src/components/header/style.scss
@@ -53,6 +53,7 @@
   &-middle {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 14px;
 
     &-icon {
@@ -60,14 +61,14 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 125px;
+      width: 15%;
       height: 50px;
       border-radius: 10px;
       cursor: pointer;
       &-info {
         position: absolute;
         top: 3px;
-        right: 1.9rem;
+        right: 10%;
         background: #e41e3f;
         border-radius: 50px;
         padding: 1px 5px;
