--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -105,3 +105,14 @@ a {
   width: 500px;
   background: red;
 }
+
+/*----Scrollbar----*/
+
+.scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+.scrollbar::-webkit-scrollbar-thumb {
+  background: #aeaeafa1;
+  border-radius: 5px;
+}
+/*----Scrollbar----*/
