--- a/frontend/src/components/header/style.scss
+++ b/frontend/src/components/header/style.scss
@@ -18,7 +18,7 @@
 
     .circle {
       width: 40px;
-      height: 40%;
+      height: 40px;
       border-radius: 50%;
       cursor: pointer;
       display: flex;
