--- a/frontend/src/components/header/style.scss
+++ b/frontend/src/components/header/style.scss
@@ -16,15 +16,6 @@
     gap: 10px;
     padding: 5px 1rem;
 
-    .circle {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
     .search {
       display: flex;
       align-items: center;
@@ -131,6 +122,97 @@
         padding: 1px 5px;
         font-size: 13px;
         color: #fff;
+      }
+    }
+  }
+}
+
+@media (max-width: 980px) {
+  .header {
+    &-left {
+      .search {
+        width: 40px;
+        height: 40px;
+        padding: 0;
+        justify-content: center;
+
+        input {
+          display: none;
+        }
+      }
+    }
+
+    &-middle {
+      transform: translateX(-30%);
+    }
+  }
+}
+
+@media (max-width: 785px) {
+  .header {
+    &-middle {
+      transform: translateX(-35%);
+    }
+  }
+}
+
+@media (max-width: 785px) {
+  .header {
+    &-middle {
+      &-icon:nth-child(5) {
+        display: none;
+      }
+    }
+  }
+}
+
+@media (max-width: 680px) {
+  .header {
+    &-middle {
+      transform: translateX(-45%);
+      &-icon {
+        max-width: 40px;
+        &:nth-child(4) {
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .header {
+    &-middle {
+      transform: translateX(-30%);
+      &-icon {
+        &:nth-child(3) {
+          display: none;
+        }
+      }
+    }
+
+    &-right {
+      &-profile {
+        display: none;
+      }
+    }
+  }
+}
+
+@media (max-width: 415px) {
+  .header {
+    &-middle {
+      transform: translateX(-48%);
+      &-icon {
+        &:nth-child(1) {
+          display: none;
+        }
+      }
+    }
+
+    &-right {
+      &-icon:nth-child(3) {
+        display: none;
       }
     }
   }
