--- a/frontend/src/components/header/style.scss
+++ b/frontend/src/components/header/style.scss
@@ -15,6 +15,7 @@
     align-items: center;
     gap: 10px;
     padding: 5px 1rem;
+    z-index: 1;
 
     .search {
       display: flex;
@@ -115,8 +116,8 @@
 
       &-info {
         position: absolute;
-        top: 6px;
-        right: -5px;
+        top: -4px;
+        right: -7px;
         background: #e41e3f;
         border-radius: 50px;
         padding: 1px 5px;
@@ -202,7 +203,7 @@
 @media (max-width: 415px) {
   .header {
     &-middle {
-      transform: translateX(-48%);
+      transform: translateX(-38%);
       &-icon {
         &:nth-child(1) {
           display: none;
