--- a/frontend/src/components/header/userMenu/subMenu.scss
+++ b/frontend/src/components/header/userMenu/subMenu.scss
@@ -8,6 +8,8 @@
   background: var(--bg-primary);
   box-shadow: 0 12px 28px 0 var(--shadow-2), 0 2px 4px 0 var(--shadow-1);
   user-select: none;
+  max-height: 90vh;
+  overflow-y: auto;
 
   &-header {
     display: flex;
@@ -26,6 +28,10 @@
     padding: 10px;
     cursor: pointer;
     border-radius: 10px;
+
+    .sub-header {
+      max-width: 240px;
+    }
 
     .sub-text {
       font-size: 12px;
