--- a/frontend/src/pages/home/left/style.scss
+++ b/frontend/src/pages/home/left/style.scss
@@ -1,13 +1,14 @@
 .left {
   &-home {
     position: fixed;
-    top: 50px;
+    top: 60px;
     left: 6px;
-    max-height: 100vh;
+    max-height: calc(100vh - 65px);
     width: 300px;
     overflow-y: auto;
     color: var(--color-primary);
     padding: 10px 0;
+    user-select: none;
 
     &-link {
       display: flex;
@@ -56,6 +57,54 @@
           }
         }
       }
+    }
+    &-shortcut {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      &-heading {
+        font-size: 16px;
+        font-weight: 600;
+        padding: 13px 10px 11px 10px;
+        color: var(--color-secondary);
+      }
+
+      &-edit {
+        cursor: pointer;
+        color: var(--blue-color);
+        display: none;
+        font-size: 14px;
+        margin-right: 20px;
+      }
+
+      &:hover {
+        .left-home-shortcut-edit {
+          display: block;
+        }
+      }
+
+      &-item {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        margin: 10px;
+        cursor: pointer;
+        border-radius: 10px;
+        font-size: 14px;
+        font-weight: 500;
+
+        img {
+          width: 36px;
+          height: 36px;
+        }
+      }
+    }
+
+    .fb-copyright {
+      margin-left: 10px;
+      font-size: 12px;
+      color: var(--color-secondary);
     }
   }
 }
