Home page responsive done

--- a/frontend/src/pages/home/left/style.scss
+++ b/frontend/src/pages/home/left/style.scss
@@ -4,7 +4,7 @@
     top: 60px;
     left: 6px;
     max-height: calc(100vh - 65px);
-    width: 300px;
+    width: 15vw;
     overflow-y: auto;
     color: var(--color-primary);
     padding: 10px 0;
