--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,3 +1,25 @@
+:root {
+  --bg-primary: #fff;
+  --bg-secondary: #f0f2f5;
+  --bg-third: #e4e6eb;
+  --bg-forth: #f0f2f5;
+  --color-primary: #050505;
+  --color-secondary: #65676b;
+  --divider: #ced0d4;
+  --dark-bg-primary: #18191a;
+  --dark-bg-secondary: #242526;
+  --dark-bg-third: #3a3b3c;
+  --dark-color-primary: #242526;
+  --dark-color-secondary: #b0b3b8;
+  --blue-color: #1876f2;
+  --green-color: #42b72a;
+  --light-blue-color: #e7f3ff;
+  --border-color: #ccced2;
+  --shadow-1: rgba(0, 0, 0, 0.2);
+  --shadow-2: rgba(0, 0, 0, 0.1);
+  --shadow-3: rgba(0, 0, 0, 0.3);
+  --shadow-inset: rgba(255, 255, 255, 0.5);
+}
 * {
   padding: 0;
   margin: 0;
@@ -31,28 +53,6 @@ a {
   text-decoration: none;
   color: inherit;
 }
-:root {
-  --bg-primary: #fff;
-  --bg-secondary: #f0f2f5;
-  --bg-third: #e4e6eb;
-  --bg-forth: #f0f2f5;
-  --color-primary: #050505;
-  --color-secondary: #65676b;
-  --divider: #ced0d4;
-  --dark-bg-primary: #18191a;
-  --dark-bg-secondary: #242526;
-  --dark-bg-third: #3a3b3c;
-  --dark-color-primary: #242526;
-  --dark-color-secondary: #b0b3b8;
-  --blue-color: #1876f2;
-  --green-color: #42b72a;
-  --light-blue-color: #e7f3ff;
-  --border-color: #ccced2;
-  --shadow-1: rgba(0, 0, 0, 0.2);
-  --shadow-2: rgba(0, 0, 0, 0.1);
-  --shadow-3: rgba(0, 0, 0, 0.3);
-  --shadow-inset: rgba(255, 255, 255, 0.5);
-}
 
 /*---------Buttons----------*/
 
@@ -77,6 +77,15 @@ a {
   &-green {
     background: var(--green-color);
     color: #fff;
+  }
+
+  &-link {
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: var(--blue-color);
+    padding: 0;
+    font: inherit;
   }
 }
 
@@ -180,4 +189,39 @@ a {
 
 .rotate180 {
   transform: rotate(180deg);
+}
+
+
+/*---------Popup----------*/
+.popup {
+  position: fixed;
+  background: var(--bg-primary);
+  box-shadow: 0 1px 2px var(--shadow-1);
+  width: 40vw;
+  min-height: 200px;
+  top: 40%;
+  left: 50%;
+  z-index: 999;
+  transform: translate(-50%, -50%);
+  text-align: center;
+
+  &__header h2 {
+    padding: 15px 20px;
+    border-bottom: 1px solid var(--bg-third);
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__body {
+    padding: 15px 20px;
+    font-weight: 500;
+  }
+
+  &__footer {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+  }
 }
