--- a/frontend/src/components/createPost/style.scss
+++ b/frontend/src/components/createPost/style.scss
@@ -1,9 +1,5 @@
-.cr {
+.creat {
   &-post {
-    background: var(--bg-primary);
-    border-radius: 10px;
-    box-shadow: 0 1px 2px var(--shadow-1);
-    width: 100%;
     cursor: pointer;
     &-header {
       display: flex;
