--- a/frontend/src/components/baseCard/style.scss
+++ b/frontend/src/components/baseCard/style.scss
@@ -2,9 +2,6 @@
     background: var(--bg-primary);
     border-radius: 10px;
     box-shadow: 0 1px 2px var(--shadow-1);
-    padding: 10px 15px;
-
-    & +.base-card {
-        margin-top: 15px;
-    }
+    padding: 1rem;
+    margin-top: 15px;
 }
