--- a/frontend/src/components/createPost/style.scss
+++ b/frontend/src/components/createPost/style.scss
@@ -5,7 +5,7 @@
       display: flex;
       align-items: center;
       gap: 8px;
-      padding: 10px 17px 5px 15px;
+      padding: 10px 0 5px 0;
       img {
         width: 40px;
         height: 40px;
@@ -27,12 +27,12 @@
       }
     }
     .splitter {
-      margin: 7px 15px;
+      margin: 7px 0;
       width: auto;
     }
 
     &-body {
-      padding: 0 10px 8px 10px;
+      padding: 0 0 8px 0;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
     }
