--- a/frontend/src/components/createPost/style.scss
+++ b/frontend/src/components/createPost/style.scss
@@ -19,7 +19,7 @@
         border-radius: 50px;
         font-size: 17px;
         line-height: 21px;
-        background: var(--bg-forth);
+        background: var(--bg-fourth);
         color: var(--color-secondary);
         display: flex;
         align-items: center;
