--- a/frontend/src/components/header/style.scss
+++ b/frontend/src/components/header/style.scss
@@ -22,7 +22,7 @@
       align-items: center;
       justify-content: center;
       gap: 0px;
-      background-color: var(--bg-forth);
+      background-color: var(--bg-fourth);
       padding: 10px 32px 10px 10px;
       border-radius: 50px;
       cursor: text;
