--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -2,7 +2,7 @@
   --bg-primary: #fff;
   --bg-secondary: #f0f2f5;
   --bg-third: #e4e6eb;
-  --bg-forth: #f0f2f5;
+  --bg-fourth: #f0f2f5;
   --color-primary: #050505;
   --color-secondary: #65676b;
   --divider: #ced0d4;
@@ -13,12 +13,16 @@
   --dark-color-secondary: #b0b3b8;
   --blue-color: #1876f2;
   --green-color: #42b72a;
+  --green-color-dark: #45bd62;
+  --green-color-dark-2: #4bbf67;
+  --yellow-gold: #f7b928;
   --light-blue-color: #e7f3ff;
   --border-color: #ccced2;
   --shadow-1: rgba(0, 0, 0, 0.2);
   --shadow-2: rgba(0, 0, 0, 0.1);
   --shadow-3: rgba(0, 0, 0, 0.3);
   --shadow-inset: rgba(255, 255, 255, 0.5);
+  --raspberry-red: #f3425f;
 }
 * {
   padding: 0;
