--- a/frontend/src/components/creatPostModal/style.scss
+++ b/frontend/src/components/creatPostModal/style.scss
@@ -23,6 +23,7 @@
             position: absolute;
             right: 15px;
             top: 12px;
+            margin-right: 0;
             &:hover i {
                 filter: invert(0);
             }
