post header component added

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -12,6 +12,7 @@
   --dark-color-primary: #242526;
   --dark-color-secondary: #b0b3b8;
   --blue-color: #1876f2;
+  --cool-gray: #828387;
   --green-color: #42b72a;
   --green-color-dark: #45bd62;
   --green-color-dark-2: #4bbf67;
