--- a/frontend/src/pages/home/stories/style.scss
+++ b/frontend/src/pages/home/stories/style.scss
@@ -1,7 +1,7 @@
 .stories {
   position: relative;
   display: grid;
-  grid-template-columns: repeat(6, 105px);
+  grid-template-columns: repeat(6, 1fr);
   gap: 10px;
   padding: 6px 0;
   .story {
